Correct alignment of clear filters button

--- a/css/manage.scss
+++ b/css/manage.scss
@@ -27,6 +27,10 @@
 	}
 }
 
+.clear-filters {
+	vertical-align: baseline;
+}
+
 .snippets .badge {
 	margin-left: 4px;
 	padding: 3px 6px;
